Use React Flow instead of Mermaid

--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
-    "mermaid": "^11.8.0",
     "next-themes": "^0.3.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-flow-renderer": "^10.3.17",
     "react-gallery-3d": "^2.2.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
